--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,28 @@ input{
   font-size: 1.2rem;
   color:gray;
 }
+
+.card-grid{
+  display: flex;
+  flex-flow: row wrap;
+}
+.card{
+  align-content: center;
+  border: 1px solid gray;
+  border-radius: 6px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-right: 3%;
+  width: 30%;
+}
+
+.card p{
+  padding: 5px;
+  text-align: center;
+}
+
+.card img{
+  max-height: 170px;
+  display: block;
+  margin: 0 auto;
+}
